--- a/src/css/turn.less
+++ b/src/css/turn.less
@@ -5,78 +5,68 @@ body {
     width: 100%;
 }
 
-#canvas {
-    width: 100%;
-    display: block;
-}
-
-.magazine-viewport {
-    overflow: visible!important;
-    z-index: 1;
+.turn {
     
-    .magazine {
-        position: relative;
-        overflow: visible;
-        margin: 0 auto !important;
-        height: 600px;
+    position: relative;
+    overflow: visible;
+    margin: 0 auto !important;
+    height: 600px;
 
-        .page-wrapper {
-            width: 50% !important;
-            height: 100% !important;
+    .page-wrapper {
+        width: 50% !important;
+        height: 100% !important;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        bottom: 0;
+        left: auto;
+        right: auto;
+        z-index: 11;
+
+        .gradient {
             position: absolute;
-            overflow: hidden;
             top: 0;
-            bottom: 0;
-            left: auto;
-            right: auto;
-            z-index: 11;
-
-            .gradient {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
-
-            &.even {
-
-                left: 0;
-
-                .gradient {
-                    background-image: linear-gradient(left, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0.2) 100%);
-                }
-
-            }
-
-            &.odd {
-
-                right: 0;
-
-                .gradient {
-                    background-image: linear-gradient(right, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0.15) 100%);
-                }
-
-            }
-
-        }
-
-        .page {
-            display: block;
+            left: 0;
             width: 100%;
             height: 100%;
-            background: #e4e4cd;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-
-            &>img {
-                user-select: none;
-                margin: 0;
-                width: 100%;
-                height: 100%;
-            }
         }
+
+        &.even {
+
+            left: 0;
+
+            .gradient {
+                background-image: linear-gradient(left, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0.2) 100%);
+            }
+
+        }
+
+        &.odd {
+
+            right: 0;
+
+            .gradient {
+                background-image: linear-gradient(right, rgba(0, 0, 0, 0) 95%, rgba(0, 0, 0, 0.15) 100%);
+            }
+
+        }
+
     }
 
+    .page {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: #e4e4cd;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+
+        &>img {
+            user-select: none;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
 .animated {
